downloads/spam_demo/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spam-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spam-backend
  template:
    metadata:
      labels:
        app: spam-backend
    spec:
      containers:
        - name: backend
          image: <your-dockerhub-username>/spam-backend
          imagePullPolicy: Always
          ports:
            - containerPort: 8008
---
apiVersion: v1
kind: Service
metadata:
  name: spam-backend-service
spec:
  selector:
    app: spam-backend
  ports:
    - port: 8008
      targetPort: 8008
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spam-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spam-frontend
  template:
    metadata:
      labels:
        app: spam-frontend
    spec:
      containers:
        - name: frontend
          image: <your-dockerhub-username>/spam-frontend
          imagePullPolicy: Always
          ports:
            - containerPort: 8501
---
apiVersion: v1
kind: Service
metadata:
  name: spam-frontend-service
spec:
  selector:
    app: spam-frontend
  ports:
    - port: 8501
      targetPort: 8501
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spam-demo
spec:
  ingressClassName: nginx
  rules:
  - host: spam-demo-<some-unique-part>.project.ris.bht-berlin.de # use some unique subdomain here
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spam-frontend-service
            port:
              number: 8501
